home page css updated to fix the slideshow bleeding on more devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,6 +60,7 @@ a {
     font-size: 1.4rem;
     padding-bottom: 1.5rem;
     padding-top: 1.2rem;
+    background-color: rgb(37, 34, 34);
 }
 
 .home_slide {
@@ -68,7 +69,7 @@ a {
 
 .home_body {
     background-color: rgb(37, 34, 34);
-    min-height: 10rem;
+    min-height: 15rem;
     padding-top: 3rem;
     margin-top: 30rem;
 }
